# technical_project

./: README.md
bcr__bot/: README.md
bcr__bot/launch/: ign.launch.py
config/: camera_params.yaml  my_camera_info.yaml
ros2__iwa/: CMakeLists.txt  package.xml
ros2__iwa/config/: standing_iiwa.rviz
ros2__iwa/launch/: ign.launch.py  iiwa_spawn.launch.py  rviz.launch.py
ros2__iwa/urdf/: iiwa.urdf  iiwa.xacro  iiwa_macro.xacro
ros2__iwa/worlds/: empty.world
